# Market-Making-with-Deep-Reinforcement-Learning-with-Order-Book-Tick-Data-from-Brazilian-Market

./: .gitignore  README.md
DRL-TCC/: ActionLoggerCallbak.py  aggregate_metrics.py  backbone.py  clear_eval.sh  demo_app.py  policy.py  pyproject.toml  test_model.py  tick_data_prep.ipynb  trade_env.py  train.py  vec_wrappers.py
DRL-TCC/final_train_logs/: train_log_PETR4_05032025.csv  train_log_PETR4_06032025.csv  train_log_PETR4_07032025.csv  train_log_PETR4_10032025.csv  train_log_PETR4_11032025.csv  train_log_PETR4_12032025.csv  train_log_PETR4_13032025.csv  train_log_PETR4_14032025.csv  train_log_PETR4_17032025.csv  train_log_PETR4_18032025.csv  train_log_PETR4_20032025.csv  train_log_PETR4_21032025.csv  train_log_PETR4_24032025.csv  train_log_PETR4_25032025.csv  train_log_PETR4_26032025.csv  train_log_PETR4_27032025.csv  train_log_PETR4_28032025.csv  train_log_PETR4_31032025.csv
DRL-TCC/test_data/: 10_MDIA3_07042025.csv  10_MDIA3_08042025.csv  10_MDIA3_09042025.csv  10_MDIA3_10042025.csv  10_MDIA3_11042025.csv  11_CMIG4_07042025.csv  11_CMIG4_08042025.csv  11_CMIG4_09042025.csv  11_CMIG4_10042025.csv  11_CMIG4_11042025.csv  12_AMBP3_07042025.csv  12_AMBP3_08042025.csv  12_AMBP3_09042025.csv  12_AMBP3_10042025.csv  12_AMBP3_11042025.csv  13_TUPY3_07042025.csv  13_TUPY3_08042025.csv  13_TUPY3_09042025.csv  13_TUPY3_10042025.csv  13_TUPY3_11042025.csv  14_XPML11_07042025.csv  14_XPML11_08042025.csv  14_XPML11_09042025.csv  14_XPML11_10042025.csv  14_XPML11_11042025.csv  15_P2LT34_08042025.csv  15_P2LT34_09042025.csv  15_P2LT34_10042025.csv  15_P2LT34_11042025.csv  (+45 more)
(+20 files in other folders)
