[project]
name = "new-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "btgsolutions-dataservices-python-client>=2.16.0",
    "dotenv>=0.9.9",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.0.1",
    "stable-baselines3>=2.7.0",
    "streamlit>=1.50.0",
    "tensorboard>=2.20.0",
]
